; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_sxnet.c_sxnet_i2r.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_sxnet.c_sxnet_i2r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32, i32 }

@.str = private unnamed_addr constant [24 x i8] c"%*sVersion: %ld (0x%lX)\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.2 = private unnamed_addr constant [21 x i8] c"\0A%*sZone: %s, User: \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_6__*, i32*, i32)* @sxnet_i2r to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sxnet_i2r(i32* %0, %struct.TYPE_6__* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_5__*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @ASN1_INTEGER_get(i32 %15)
  store i64 %16, i64* %9, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load i64, i64* %9, align 8
  %20 = add nsw i64 %19, 1
  %21 = load i64, i64* %9, align 8
  %22 = call i32 (i32*, i8*, i32, i8*, ...) @BIO_printf(i32* %17, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %18, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i64 %20, i64 %21)
  store i32 0, i32* %12, align 4
  br label %23

23:                                               ; preds = %51, %4
  %24 = load i32, i32* %12, align 4
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @sk_SXNETID_num(i32 %27)
  %29 = icmp slt i32 %24, %28
  br i1 %29, label %30, label %54

30:                                               ; preds = %23
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* %12, align 4
  %35 = call %struct.TYPE_5__* @sk_SXNETID_value(i32 %33, i32 %34)
  store %struct.TYPE_5__* %35, %struct.TYPE_5__** %11, align 8
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = call i8* @i2s_ASN1_INTEGER(i32* null, i32 %38)
  store i8* %39, i8** %10, align 8
  %40 = load i32*, i32** %7, align 8
  %41 = load i32, i32* %8, align 4
  %42 = load i8*, i8** %10, align 8
  %43 = call i32 (i32*, i8*, i32, i8*, ...) @BIO_printf(i32* %40, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i32 %41, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i8* %42)
  %44 = load i8*, i8** %10, align 8
  %45 = call i32 @OPENSSL_free(i8* %44)
  %46 = load i32*, i32** %7, align 8
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @ASN1_STRING_print(i32* %46, i32 %49)
  br label %51

51:                                               ; preds = %30
  %52 = load i32, i32* %12, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %12, align 4
  br label %23

54:                                               ; preds = %23
  ret i32 1
}

declare dso_local i64 @ASN1_INTEGER_get(i32) #1

declare dso_local i32 @BIO_printf(i32*, i8*, i32, i8*, ...) #1

declare dso_local i32 @sk_SXNETID_num(i32) #1

declare dso_local %struct.TYPE_5__* @sk_SXNETID_value(i32, i32) #1

declare dso_local i8* @i2s_ASN1_INTEGER(i32*, i32) #1

declare dso_local i32 @OPENSSL_free(i8*) #1

declare dso_local i32 @ASN1_STRING_print(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
